<resources>
    <string name="app_name">InsurancePremiumCalculator</string>
    <string name="age">Age :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="smoker">Smoker :</string>
    <string name="premium">Total Premium :</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="yes">yes</string>

    <string-array name="age_groups">
        <item>Less than 17</item>
        <item>17 to 25</item>
        <item>26 to 30</item>
        <item>31 to 40</item>
        <item>41 to 55</item>
        <item>More than 55</item>
    </string-array>
</resources>
